--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">HW1</string>
-    <string name="add_string">add String</string>
+    <string name="add_number">add String</string>
     <string name="back">BACK</string>
 </resources>
