--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">HW1</string>
     <string name="add_number">add String</string>
     <string name="back">BACK</string>
+    <string name="bundle_text">text</string>
+    <string name="bundle_color">color</string>
 </resources>
